--- a/config/.env.example
+++ b/config/.env.example
@@ -12,7 +12,7 @@ MAX_FILE_UPLOAD = 1000000
 
 SMTP_HOST=smtp.mailtrap.io
 SMTP_PORT=2525
-SMTP_EMAIL=
-SMTP_PASSWORD=
+SMTP_EMAIL=580cf4908b3711
+SMTP_PASSWORD=05eaaf189f3231
 FROM_EMAIL=noreply@boilerplate.com
 FROM_NAME=Boilerplate
